--- a/app/src/main/res/drawable/backgroundshape.xml
+++ b/app/src/main/res/drawable/backgroundshape.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#e6f2ff"/>
-    <corners android:radius="10dp"/>
-<stroke android:color="@color/white" android:width="1dp"/>
+    <solid android:color="#26FFFFFF"/>
 
+    <corners android:radius="30dp"/>
+
+    <stroke android:width="1dp" android:color="#80FFFFFF"/>
 </shape>
